# tgfeed

./: .env.example  .gitignore  LICENSE  docker-compose.yml
api/: Dockerfile  config.example.toml  pyproject.toml
api/app/: main.py  sign_in.py
api/app/tglib/: config.py  database.py  storage.py  telegram.py
api/src/: console.py  main.py  sign_in.py
api/src/tglib/: config.py  database.py  logger.py  processor.py  storage.py  telegram.py
